test/sema/assign-ptr-to-immutable-into-ptr-to-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

extern def foo(): int*;

def main() {
    // CHECK: [[@LINE+1]]:30: error: cannot initialize variable of type 'mutable int*' with 'int*'
    let p: mutable int* = foo();
}
